--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--3DHOP imports START-->
+    <!--STYLESHEET-->
+    <link type="text/css" rel="stylesheet" href="%REACT_APP_3DHOP_ROOT%/stylesheet/3dhop.css"/>  
+    <!--SPIDERGL-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/spidergl.js"></script>
+    <!--JQUERY-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/jquery.js"></script>
+    <!--PRESENTER-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/presenter.js"></script>
+    <!--3D MODELS LOADING AND RENDERING-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/nexus.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/ply.js"></script>
+    <!--TRACKBALLS-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_turntable.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_turntable_pan.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_pantilt.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_sphere.js"></script>
+    <!--UTILITY-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/init.js"></script>
+    <!--3DHOP imports START-->
     <title>React App</title>
   </head>
   <body>
