created a config file and centralized references to process.env. ...

--- a/public/index.html
+++ b/public/index.html
@@ -26,23 +26,23 @@
     -->
     <!--3DHOP imports START-->
     <!--STYLESHEET-->
-    <link type="text/css" rel="stylesheet" href="%REACT_APP_3DHOP_ROOT%/stylesheet/3dhop.css"/>  
+    <link type="text/css" rel="stylesheet" href="%REACT_APP_3DHOP_SOURCE%/stylesheet/3dhop.css"/>  
     <!--SPIDERGL-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/spidergl.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/spidergl.js"></script>
     <!--JQUERY-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/jquery.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/jquery.js"></script>
     <!--PRESENTER-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/presenter.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/presenter.js"></script>
     <!--3D MODELS LOADING AND RENDERING-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/nexus.js"></script>
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/ply.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/nexus.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/ply.js"></script>
     <!--TRACKBALLS-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_turntable.js"></script>
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_turntable_pan.js"></script>
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_pantilt.js"></script>
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/trackball_sphere.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_turntable.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_turntable_pan.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_pantilt.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_sphere.js"></script>
     <!--UTILITY-->
-    <script type="text/javascript" src="%REACT_APP_3DHOP_ROOT%/js/init.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/init.js"></script>
     <!--3DHOP imports START-->
     <title>React App</title>
   </head>
