Model Viewer component now works with multiple models on same page and without iframes

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--3DHOP imports START-->
+    <!--SPIDERGL-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/spidergl.js"></script>
+    <!--PRESENTER-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/presenter.js"></script>
+    <!--3D MODELS LOADING AND RENDERING-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/nexus.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/ply.js"></script>
+    <!--TRACKBALLS-->
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_turntable.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_turntable_pan.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_pantilt.js"></script>
+    <script type="text/javascript" src="%REACT_APP_3DHOP_SOURCE%/js/trackball_sphere.js"></script>
+    <!--3DHOP imports START-->
     <title>React App</title>
   </head>
   <body>
